third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_local_field.exp

Diagnostics:
error: conflicting borrow operations
   ┌─ tests/reference-safety/v1-tests/borrow_local_field.move:29:9
   │
26 │         let f = &v.f;
   │                  - other local borrow
27 │         let s = &mut v; // error in v2
   │                 ------ mutable local borrow attempted here
28 │         *f;
29 │         *s;
   │         ^^ reference used here
